# Synapse-Agent

./: AI_INTELLIGENCE_CONTROLLER.md  LIQUID_INTELLIGENCE_SYSTEM.md  SWARM_INTELLIGENCE_TECHNICAL_DOCUMENTATION.md  SWARM_MANAGER_RECENT_IMPROVEMENTS.md  account_manager.py  ai_analysis.py  ai_media_generator.py  apk_analyzer.py  apk_creator.py  apk_manager.py  app_generator.py  cloud_storage.py  config.py  database.py  demo_app.py  file_system.py  file_system_web.py  installer.py  main.py  media_handler.py  mind_map.py  models.py  module_manager.py  platform_specific.py  platform_utils.py  pyproject.toml  replit.md  test_apk_creation.py  tools_panel.py  ui_extractor.py  windows_app.py
agent-framework/agent-types/: financial-agents-suite.config.ts  healthcare-agents-suite.config.ts
apk_storage/: Custom_Social_App_v2.0.0_20250710_080121.apk  Finance_Tracker_v3.0.1_20250710_080119.apk  Game_Center_v2.3.1_20250710_080119.apk  Photo_Editor_Plus_v1.8.0_20250710_080119.apk  SocialConnect_v1.5.2_20250710_080119.apk  TaskMaster_Pro_v2.1.0_20250710_080119.apk  Test_App_v1.0.0_20250710_080120.apk
assets/: icons.py  styles.qss
attached_assets/: Pasted--Drive-Manager-Pro-Specification-Overview-Drive-Manager-Pro-is-a-cross-platform-file-management-1746734889187.txt
flutter-frontend/: README.md  pubspec.yaml
liquid-intelligence-system/: LiquidIntelligenceSystem.test.ts  LiquidIntelligenceSystem.ts  README.md  example.ts  index.ts  jest.config.js  package.json  rollup.config.js  tsconfig.json
public/: browserconfig.xml  manifest.webmanifest  offline.html  sw.js
(+32 files in other folders)
